# bazel-opencv

./: .bazelrc  .gitignore  MODULE.bazel  README.md  bazel-bazel-opencv  variables.bzl
include/opencv2/: BUILD.bazel  gen_headers.bzl
modules/core/: BUILD.bazel
rules/cmake_template/: defs.bzl
rules/cmake_template/private/: cmake_template.bzl
test/: BUILD.bazel  opencv_test.cpp
test/data/: BUILD.bazel
